1.1.4dev
 - fixed copying of aliases
 
1.1.3
 - added static declaration + code comments
 - changed incorrect db name case on upgrade
 - fixed incorrect form closure when only one language enabled in dash settings
 - fixed changed unique index from lang to local on MultilingualPageRelations
 - fixed incomplete object in session problem by storing locale as string as apposed to Zend_Locale
 - fixed copying of aliases and excluded aliases from page report
 - added check for Exclude from Internationalization Copy page attribute on install. 
 - replaced reference to undefined constant in helper/interface/flag.php
 
# 1.1.2
- Added exclude from internationalization copy custom attribute

# 1.1.1 
 - Improved 5.5 UI
 - Fixed bug where 404 pages would be redirected to default language page
 - changed translations to work off of locale instead of language
 - locale browser detection and option to automatically redirect based on that value
 - package ui with matching locale are automatically translated in the front end.
 - updated ui for 5.5

# 1.0.4
- Added German translation

# 1.0.3
- Added missing t() strings so package itself can be completely translated.
- fixed db.xml schema problem for language block.

# 1.0.2.3

- Added Finnish translation

# 1.0.2.2

- Added Italian translation. One message and the two sub-pages didn't have
translatable titles.

# 1.0.2.1

- Added French translation

# 1.0.1

- Removed error on page report if you don't have any multilingual sections enabled

# 1.0

Initial Version